<resources>
    <string name="app_name">Astap platesolver</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <string name="abort">Abort</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_download">Cancel download</string>
    <string name="close">Close</string>

    <string name="image">Image</string>
    <string name="dimension">Dimension</string>
    <string name="last_update">Last update</string>
    <string name="show_matched_stars">Labels</string>
    <string name="fewer">Fewer</string>
    <string name="more">More</string>
    <string name="run">Run</string>

    <string name="settings_install_stardb">Install</string>
    <string name="settings_reinstall_stardb">Reinstall</string>
    <string name="settings_retry_install_stardb">Retry</string>

    <string name="degree">deg</string>
    <string name="reinstall">Reinstall</string>
    <string name="auto">Auto</string>

    <string-array name="db_type">
        <item>H18 (FoV 0.2°~10°)</item>
        <item>V17 (FoV 1°~20°)</item>
        <item>W08 (FoV 20°~)</item>
    </string-array>

    <string name="placeholder">Placeholder</string>
    <string name="downloading">Downloading</string>
    <string name="star_database">Star database</string>
    <string name="h18">H18 (FoV 0.2°~10°)</string>
    <string name="h17">H17 (FoV 1°~10°)</string>
    <string name="v17">V17 (FoV 1°~20°)</string>
    <string name="w08">W08 (FoV 20°~)</string>
    <string name="v17_w08">V17+W08 (FoV 1°~)</string>

    <string name="file">File</string>
    <string name="search_origin">Search origin</string>
    <string name="running_astap">Running astap…</string>
    <string name="filename">Filename</string>
    <string name="field_of_view">Field of view</string>
    <string name="mm_lens_fx">mm FX lens, </string>
    <!-- tooltip help messages -->
    <string name="help_fov">Approximate field of view of the image. Must be set.
    </string>
    <string name="help_fov_lens">
        The focal length of the FX (35mm) lens used to produce the photo.
    </string>
    <string name="help_fov_deg">Field of view of the image, in degrees.
    </string>

    <string name="help_file">Pick a JPEG, PNG, or FITS file</string>
    <string name="help_search_origin">
        Optional. Setting a star or DSO that\'s
        likely in the image will make Astap run faster.
    </string>
    <string name="help_run_astap">Run the Astap platesolver</string>
</resources>