<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_setup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text_setup_searchstart_ra_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:maxLines="2"
        android:minLines="2"
        android:text=""
        app:layout_constraintBaseline_toBaselineOf="@+id/autocomplete_astap_search_origin"
        app:layout_constraintStart_toEndOf="@+id/autocomplete_astap_search_origin" />


    <Button
        android:id="@+id/button_astap_pick_file"
        style="@style/RegularButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/file"
        android:tooltipText="@string/help_file"
        app:layout_constraintBottom_toTopOf="@+id/label_setup_fov"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="fragment_setup" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="283dp" />

    <TextView
        style="@style/HeaderText"
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@id/text_astap_fov_deg"
        android:text="@string/degree"
        android:tooltipText="@string/help_fov_deg"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_astap_fov_deg"
        app:layout_constraintStart_toEndOf="@+id/text_astap_fov_deg" />

    <EditText
        style="@style/EditText"
        android:id="@+id/text_astap_fov_lens"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:ems="10"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="number"
        android:tooltipText="@string/help_fov_lens"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_setup_fov"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/label_setup_fov"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/field_of_view"
        android:tooltipText="@string/help_fov"
        app:layout_constraintBottom_toTopOf="@+id/label_setup_search_origin"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <EditText
        style="@style/EditText"
        android:id="@+id/text_astap_fov_deg"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:digits="0123456789."
        android:ems="10"
        android:imeOptions="actionNext"
        android:importantForAutofill="no"
        android:inputType="text|number"
        android:tooltipText="@string/help_fov_deg"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        style="@style/HeaderText"
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mm_lens_fx"
        android:tooltipText="@string/help_fov_lens"
        android:labelFor="@id/text_astap_fov_lens"
        app:layout_constraintBaseline_toBaselineOf="@+id/text_astap_fov_lens"
        app:layout_constraintStart_toEndOf="@+id/text_astap_fov_lens" />

    <TextView
        android:id="@+id/text_setup_imagename"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_astap_pick_file"
        app:layout_constraintStart_toEndOf="@+id/button_astap_pick_file" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="fragment_setup" />

    <AutoCompleteTextView
        style="@style/EditText"
        android:id="@+id/autocomplete_astap_search_origin"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:importantForAutofill="no"
        android:hint="@string/auto"
        android:tooltipText="@string/help_search_origin"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_setup_search_origin"
        app:layout_constraintStart_toStartOf="@+id/guideline4" />

    <TextView
        android:id="@+id/label_setup_search_origin"
        style="@style/HeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/search_origin"
        android:tooltipText="@string/help_search_origin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="313dp" />

    <com.yasushisaito.platesolver.AnnotatedImageView
        android:id="@+id/view_astap_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/button_astap_pick_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_astap_run"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="end|bottom"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@+id/view_astap_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:tooltipText="@string/help_run_astap"
        android:contentDescription="@string/help_run_astap"
        app:srcCompat="@android:drawable/ic_media_play" />

</androidx.constraintlayout.widget.ConstraintLayout>
